traversal.snake.Snake.scala.code

override def run() {
  def murN():Boolean={
    
  }
  def fini:Boolean ={
    if(estFaceMur==true){
      
    }
  }
}